Refactor: End-to-end code flow validation and architectural fixes